# ddlint

./: .gitignore  .markdownlint-cli2.jsonc  .vale.ini  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  clippy.toml  typos.local.toml  typos.toml
docs/: adr-001-parser-crate-split.md  adr-002-relation-role-kind-modelling.md  building-an-error-recovering-parser-with-chumsky.md  complexity-antipatterns-and-refactoring-strategies.md  contents.md  ddlint-design-and-road-map.md  ddlint-design.md  developers-guide.md  differential-datalog-parser-syntax-spec-migration-plan.md  differential-datalog-parser-syntax-spec-updated.md  documentation-analysis-parser-design.md  documentation-style-guide.md  function-parsing-design.md  haskell-parser-analysis.md  parser-conformance-register.md  parser-gap-analysis.md  parser-implementation-notes.md  parser-plan.md  pratt-parser-for-ddlog-expressions.md  reliable-testing-in-rust-via-dependency-injection.md  repository-layout.md  roadmap.md  rust-doctest-dry-guide.md  rust-parser-testing-comprehensive-guide.md  rust-testing-with-rstest-fixtures.md  scripting-standards.md  users-guide.md
examples/: best_price.dl  extern_transformer_decl.dl  flatmap_words.dl  functions_and_match.dl  hello_join.dl  imperative_syntax.dl  left_join_by_negation.dl  multi_heads.dl  multiset_passthrough.dl  paths_excluding.dl  primary_key_and_index.dl  reachability.dl  ref_and_intern.dl  stream_fold_skeleton.dl  streams_join.dl  tuple_destructuring.dl
src/: language.rs  lib.rs  main.rs  syntax_utils.rs  test_util.rs  tokenizer.rs
tests/: aggregation_boundary.rs  apply_items.rs  attribute_placement.rs  collection_literal_boundary.rs  expr_to_sexpr.rs  expression_compound.rs  expression_entry.rs  function_api.rs  (+25 more)
(+233 files in other folders)
