[package]
name = "ddlint"
version = "0.1.0"
edition = "2024"

[dependencies]
rowan = { version = "0.15", default-features = false }
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["std"] }
logos = { version = ">=0.13.0, <0.14.0", default-features = false, features = ["export_derive"] }
phf = { version = ">=0.11.0, <0.12.0", default-features = false, features = ["macros"] }
chumsky = { version = ">=0.9.0, <0.10.0", default-features = false, features = ["std"] }
log = { version = ">=0.4.0, <0.5.0", default-features = false }
thiserror = { version = "1.0", default-features = false }

[features]
test-util = []

[dev-dependencies]
rstest = ">=0.25.0, <0.26.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes                    = "deny"
allow_attributes_without_reason     = "deny"
blanket_clippy_restriction_lints    = "deny"

# 2. debugging leftovers
dbg_macro       = "deny"
print_stdout    = "deny"
print_stderr    = "deny"

# 3. panic-prone operations
unwrap_used                     = "deny"
expect_used                     = "deny"
indexing_slicing                = "deny"
string_slice                    = "deny"
integer_division                = "deny"
integer_division_remainder_used = "deny"

# 4. portability
host_endian_bytes   = "deny"
little_endian_bytes = "deny"
big_endian_bytes    = "deny"

# 5. nursery idiom polish
or_fun_call            = "deny"
option_if_let_else     = "deny"
use_self               = "deny"
string_lit_as_bytes    = "deny"

# 6. numerical foot-guns
float_arithmetic = "deny"
